# openai-toolbelt

./: .pre-commit-config.yaml  LICENSE  README.md  openai.ipynb  pyproject.toml  requirements.txt
notebook/: openai.ipynb
openai_toolbelt/: __init__.py  client.py  models.py
tests/: test_client.py
